<resources>
    <string name="app_name">login10</string>
    <string name="did_u">Did U?</string>
    <string name="user">user</string>
    <string name="ShowList">showList</string>
    <string name="add">add</string>
    <string name="my_list">My List</string>
    <string name="planName">PlanName</string>
    <string name="memo">메모</string>
    <string name="PlanTime">8:00</string>
    <string name="currentDate">2020-08-17</string>
    <string name="on">ON</string>
    <string name="addButton">+</string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="plan">일정 이름</string>
    <string name="what_is_your_plan">What is your plan?</string>
    <string name="choose_date">날짜 선택</string>
    <string name="date2">0000 / 00 / 00</string>
    <string name="time2">00시 00분</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="choose_time">시간 선택</string>
    <string name="Alarm">알람</string>
    <string name="write_memo">Write your memo.</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="save_changes">변경 저장</string>
    <string name="delete">삭제</string>
    <string name="complete">O</string>
    <string name="unComplete">X</string>
    <string name="showList">▤</string>
    <string name="Menu">||</string>
    <string name="todo">TODO</string>
    <string name="backHome">◀</string>
    <string name="Monday">월요일마다</string>
    <string name="repeat">반복</string>
    <string name="choose_repeated_day_of_week">반복 선택</string>
    <string name="menu">menu</string>
    <string name="LogOut">로그아웃</string>
    <string name="checkPlan">일정확인</string>
    <string name="findLecture">수강교환찾기</string>
    <string name="addPlans">일정추가</string>
    <string name="changeLectuer">수강교환등록</string>
    <string name="findPW">암호찾기</string>
    <string name="putEmail">등록한 Email을 입력해 주세요/</string>
    <string name="sendEmail">Email 발송</string>
    <string name="Login">로그인</string>
    <string name="NewUser">신규 회원가입</string>
    <string name="notRememberPW">패스워드가 기억나지 않습니까?</string>
    <string name="enter_password">Enter password</string>
    <string name="MakeUser">회원가입</string>
    <string name="enter_email">Enter email</string>
    <string name="n_email">이 앱은 회원가입을 해야 정상적으로 사용할 수 있습니다.\n Email로 등록해 주세요.</string>
    <string name="GoogleLogin">회원이시면 여기에서 로그인 해주세요.</string>
    <string name="Home">홈</string>
    <string name="Logout">로그아웃</string>
    <string name="EraseUser">회원탈퇴 합니다.</string>
</resources>