<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:background="#D8D8D8" >

        <Button
            android:id="@+id/BackHome"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/backHome"
            android:background="#D8D8D8"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#5E5D5D"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/MyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/my_list"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#5E5D5D"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="492dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-300dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/background_list"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_list"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:text="@string/plan"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/AddPlanName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_input_plan"
                android:hint="@string/what_is_your_plan"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#000"
                android:textColorHint="#808080" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:text="@string/date"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addDate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_addbutton"
                android:onClick="OnClickHandlerDate"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_date"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addTime"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_addbutton"
                android:onClick="OnClickHandlerTime"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_time"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Alarm"
                android:textColor="#000"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/addAlarm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/background_addbutton"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/RepeatDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/repeat"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedRepeatDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addRepeat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/background_addbutton"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_repeated_day_of_week"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/memo"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/AddMemo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/background_input_plan"
                android:hint="@string/write_memo"
                android:inputType="text"
                android:maxLength="80"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#000"
                android:textColorHint="#808080" />
        </LinearLayout>
    </ScrollView>
    
    <Button
        android:id="@+id/SaveButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/save"
        android:textColor="#FFF"
        android:background="@drawable/background_button"
        android:textSize="18sp" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/cancel"
        android:textColor="#AFAFAF"
        android:background="@drawable/background_cancel_button"
        android:textSize="18sp" />

</LinearLayout>