<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="23sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/findPW" />

    <TextView
        android:text="@string/putEmail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/background_input_plan"
        android:layout_marginTop="50dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sendEmail" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>