<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityCal">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:background="#D8D8D8"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/BackHome"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#D8D8D8"
            android:contentDescription="@string/todo"
            android:text="@string/backHome"
            android:textColor="#5E5D5D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/MyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/edit_plan"
            android:textAlignment="center"
            android:textColor="#5E5D5D"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_list"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_list"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:text="@string/plan"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/AddPlanName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_input_plan"
                android:hint="@string/what_is_your_plan"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#000"
                android:textColorHint="#808080" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:text="@string/date"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addDate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_addbutton"
                android:onClick="OnClickHandlerDate"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_date"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="7dp"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addTime"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints=""
                android:background="@drawable/background_addbutton"
                android:onClick="OnClickHandlerTime"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_time"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Alarm"
                android:textColor="#000"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/addAlarm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/background_addbutton"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/RepeatDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/repeat"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/selectedRepeatDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addRepeat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/background_addbutton"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choose_repeated_day_of_week"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/Memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/memo"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/AddMemo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:background="@drawable/background_input_plan"
                android:hint="@string/write_memo"
                android:inputType="text"
                android:maxLength="80"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#000"
                android:textColorHint="#808080" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="408dp"
        android:layout_height="135dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/SaveChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/save_changes"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_cancel_button"
            android:text="@string/delete"
            android:textColor="#AFAFAF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>