<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="23sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/Login" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_input_plan"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="45dp"
        android:background="@drawable/background_input_plan"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Login" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/NewUser"
            android:id="@+id/textViewSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/notRememberPW"
            android:textColor="#000"
            android:layout_marginLeft="16dp"
            android:id="@+id/textViewFindpassword"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

    </LinearLayout>


    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textviewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>